--- a/index.html
+++ b/index.html
@@ -6,12 +6,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>clock</title>
 </head>
+<style>
+    body,html
+    {
+        height:100%;
+        width:100%;
+        margin:0;
+    }
+    body
+    {
+        display:flex;
+        flex-direction:column;
+    }
+    .heading
+    {
+        background-color:blue;
+        position:fixed;
+        top:0px;
+        width:100%;
+        display:flex;
+        justify-content:center;
+    }
+    a
+    {
+        text-decoration:none;
+        padding:1%;
+        color:blue;
+        background-color:white;
+    }
+    a:hover
+    {
+        color:white;
+        background-color:blue;
+    }
+    .myself
+    {
+       padding-top:10%;
+       min-height:100%;
+      
+    }
+    .myskills
+    {
+       min-height:100%;
+       padding-top:10%;
+    }
+    .contact
+    {
+       min-height:100%;
+       padding-top:10%;
+    }
+</style>
 <body>
-    <h1></h1>
+    <div class="heading">
+        <a href="#my">Myself</a>
+        <a href="#ms">Myskills</a>
+        <a href="#c">Contact</a>
+    </div>
+
+    <div class="myself" id="my">
+     <h1>Surya prakash P</h1>
+     <p>A Warm Welcome to my portfolio site,Myself surya prakash p a new arrival to the web development field.Has the desire to create usefull and efficient site that will definitely inspire others.</p>
+    </div>
+
+    <div class="myskills" id="ms">
+    <h1>My Skills</h1>
+    <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JAVASCRIPT</li>
+    <li>BOOTSTAP</li>
+    <li>ANGULAR</li>
+    <li>NODE JS</li>
+    <li>EXPRESS JS</li>
+    <li>MONGO DB</li>
+    <li>GIT</li>
+    <li>WORDPRESS</li>
+    </ul>
+    <h1>My Projects</h1>
+    <ol>
+        <li>Digital Restaurant app using ANGULAR</li>
+    </ol>
+    </div>
+
+    <div class="contact" id="c">
+    <h1>Contact</h1>
+     <ul>
+        <li>Name:surya prakash p</li>
+        <li>Email id:suryanarmatha03@gmail.com</li>
+        <li>Location:Erode,Tamil Nadu</li>
+     </ul>
+    </div>
 </body>
-<script>
-    setInterval(()=>{
-        document.querySelector('h1').innerText=new Date().toLocaleString(undefined, {timeZone: 'Asia/Kolkata'});
-    },1000);
-</script>
 </html>
