update the responsive

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
        {
          max-height:10%;
        }
+        #outer
+        {
+            margin-top:20%;
+        }
     }
 </style>
 <body>
