--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div id="outer">
     <div class="myself" id="my">
      <h1>Surya prakash P</h1>
-     <p>Hello friends,Myself surya prakash a new arrival to the web development field.Has the desire to create usefull and efficient site that will definitely inspire others.</p>
+        <p>Hello friends,Myself <b>Surya Prakash P</b> a New arrival to the Web Development Field.Has the desire to create usefull and efficient site that will definitely <i>Inspire Others</i>.</p>
     </div>
 
     <div class="myskills" id="ms">
@@ -119,8 +119,14 @@
     </ul>
     <h1>My Projects</h1>
     <ol>
-        <li>Digital Restaurant app using ANGULAR</li>
+        <li>Digital Restaurant app using ANGULAR(only frontend)</li>
+        <li>HTML form that uses mongoDB to store the input data</li>
     </ol>
+        <h1>Certification</h1>
+        <ol>
+            <a src="https://university.mongodb.com/course_completion/f06a01ca-c601-4885-a9bb-2e465c74b69c" target="_blank">MongoDB</a>
+            <a src="https://www.hackerrank.com/certificates/117b9804d1d3" target="_blank">Javascript</a>
+         </ol>
     </div>
 
     <div class="contact" id="c">
