--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     </ol>
         <h1>Certification</h1>
         <ol>
-            <a src="https://university.mongodb.com/course_completion/f06a01ca-c601-4885-a9bb-2e465c74b69c" target="_blank">MongoDB</a>
-            <a src="https://www.hackerrank.com/certificates/117b9804d1d3" target="_blank">Javascript</a>
+            <a href="https://university.mongodb.com/course_completion/f06a01ca-c601-4885-a9bb-2e465c74b69c" target="_blank">MongoDB</a>
+            <a href="https://www.hackerrank.com/certificates/117b9804d1d3" target="_blank">Javascript</a>
          </ol>
     </div>
 
