correcting the padding of my heading

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         height:100%;
         width:100%;
     }
+    .link a span
+    {
+        padding-top:1%;
+    }
     .heading
     {
         background-color:black;
