--- a/index.html
+++ b/index.html
@@ -99,30 +99,31 @@
     </div>
     <div id="outer">
     <div class="myself" id="my">
-     <h1>Surya prakash P</h1>
-        <p>Hello friends,Myself <b>Surya Prakash P</b> a New arrival to the Web Development Field.Has the desire to create usefull and efficient site that will definitely <i>Inspire Others</i>.</p>
+    <p>Hello friends,Myself <b>Surya Prakash P</b>.Having the desire to create usefull and efficient site that will definitely 
+    <i>Inspire Others</i>.</p>
     </div>
 
     <div class="myskills" id="ms">
-    <h1>My Skills</h1>
+    <h1>My Skills are</h1>
     <ul>
     <li>HTML</li>
     <li>CSS</li>
     <li>JAVASCRIPT</li>
-    <li>BOOTSTAP</li>
+    <li>BOOTSTRAP</li>
     <li>ANGULAR</li>
     <li>NODE JS</li>
     <li>EXPRESS JS</li>
-    <li>MONGO DB</li>
-    <li>GIT</li>
-    <li>WORDPRESS</li>
+    <li>MONGODB</li>
+    <li>MULESOFT</li>
+    <li>DELL BOOMI</li>
     </ul>
     <h1>My Projects</h1>
     <ol>
-        <li>Digital Restaurant app using ANGULAR(only frontend)</li>
+        <li>Digital Restaurant app using ANGULAR(Complted)</li>
         <li>HTML form that uses mongoDB to store the input data</li>
+        <li>Garden App using ANGULAR(Ongoing)</li>
     </ol>
-        <h1>Certification</h1>
+        <h1>Certifications</h1>
         <ol>
             <a href="https://university.mongodb.com/course_completion/f06a01ca-c601-4885-a9bb-2e465c74b69c" target="_blank">MongoDB</a>
             <a href="https://www.hackerrank.com/certificates/117b9804d1d3" target="_blank">Javascript</a>
@@ -203,33 +204,4 @@
         }
     }
 </script>
-
-<!--<style>
-    body
-    {
-        display:flex;
-        flex-direction:column;
-        width:100%;
-    }
-    #one
-    {
-        background-color:red;
-        width:100%;
-    }
-    #two
-    {
-        background-color:blue;
-        width:100%;
-    }
-    #zero
-    {
-        background-color:green;
-        width:100%;
-    }
-</style>
-<body>
-    <div id="zero">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint labore vero reiciendis ad sunt nihil, consequatur magnam dolores tempore excepturi voluptatibus repellat inventore sed quo sequi? Iusto ad impedit, nulla accusantium commodi omnis adipisci ea itaque maiores sed libero magnam optio alias vel ipsum quae sapiente perspiciatis. Molestiae labore exercitationem est inventore, atque voluptate odio perspiciatis impedit ipsa sed officia numquam alias, odit doloribus vitae nemo maxime nulla architecto. Expedita suscipit cupiditate error ad. Rerum ut necessitatibus explicabo voluptas error officia quo cum dolorum, nisi harum iste libero voluptates excepturi recusandae mollitia temporibus inventore assumenda eveniet quisquam suscipit! Officiis, suscipit.</div>
-    <div id="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint labore vero reiciendis ad sunt nihil, consequatur magnam dolores tempore excepturi voluptatibus repellat inventore sed quo sequi? Iusto ad impedit, nulla accusantium commodi omnis adipisci ea itaque maiores sed libero magnam optio alias vel ipsum quae sapiente perspiciatis. Molestiae labore exercitationem est inventore, atque voluptate odio perspiciatis impedit ipsa sed officia numquam alias, odit doloribus vitae nemo maxime nulla architecto. Expedita suscipit cupiditate error ad. Rerum ut necessitatibus explicabo voluptas error officia quo cum dolorum, nisi harum iste libero voluptates excepturi recusandae mollitia temporibus inventore assumenda eveniet quisquam suscipit! Officiis, suscipit.</div>
-    <div id="two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint labore vero reiciendis ad sunt nihil, consequatur magnam dolores tempore excepturi voluptatibus repellat inventore sed quo sequi? Iusto ad impedit, nulla accusantium commodi omnis adipisci ea itaque maiores sed libero magnam optio alias vel ipsum quae sapiente perspiciatis. Molestiae labore exercitationem est inventore, atque voluptate odio perspiciatis impedit ipsa sed officia numquam alias, odit doloribus vitae nemo maxime nulla architecto. Expedita suscipit cupiditate error ad. Rerum ut necessitatibus explicabo voluptas error officia quo cum dolorum, nisi harum iste libero voluptates excepturi recusandae mollitia temporibus inventore assumenda eveniet quisquam suscipit! Officiis, suscipit.</div>
-</body>-->
 </html>
