--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div class="contact" id="c">
     <h1>Contact</h1>
      <ul>
-        <li>Name:surya prakash p</li>
+        <li>Name:surya prakash P</li>
         <li>Email id:suryanarmatha03@gmail.com</li>
         <li>Location:Erode,Tamil Nadu</li>
      </ul>
