--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
     <div class="container">
         <div id="myprofile">
-           <img src="suryaophoto.jpeg">
+           <img src="./suryaophoto.jpeg">
            <p><i class="fa-solid fa-user"></i>surya prakash palanisamy</p>
            <div><i class="fa-solid fa-envelope"></i>suryanarmatha03@gmail.com</div>
            <p><i class="fa-solid fa-phone"></i>7904211765</p>
