--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
         {
           body
           {
-            font-size:50%;
+            font-size:75%;
           }
           img 
           {
             width:200%;
           }
+        }
+        body,html
+        {
+            width:100%;
+            height:100%;
+        }
+        body
+        {
+            margin:0px;
         }
         .container
         {
@@ -24,6 +33,8 @@
             grid-gap:0.5%;
             padding:1%;
             border:2px solid black;
+            width:100%;
+            height:100%;
         }
         #myprofile
         {
