--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
             width:200%;
           }
         }
+         @media only screen and (max-width:800px)
+        {
+          body
+          {
+            font-size:50%;
+          }
+        }
         body,html
         {
             width:100%;
