--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
             font-size:80%;
           }
         }
+        @media only screen and (max-width:530px)
+        {
+          body
+          {
+            font-size:70%;
+          }
+        }
+        @media only screen and (max-width:415px)
+        {
+          body
+          {
+            font-size:60%;
+          }
+        }
         body,html
         {
             width:100%;
